--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
 
 	<head>
 		<meta charset='utf-8' />
-		<title>Raise Your Hand Texas programs</title>
+		<title>Charles Butt Foundation programs</title>
 		<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 		<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;1,700&family=Work+Sans:wght@300;500;700&display=swap" rel="stylesheet">
 		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
-		<link href="css/ryht-legislative-style.css" rel="stylesheet" />
+		<link href="css/cbf-programs-style.css" rel="stylesheet" />
 		<style>
 			body { margin:0; padding:0; }
 			#map { position:absolute; top:0; bottom:0; width:100%; }
@@ -44,10 +47,10 @@
 		<div id='landing' onClick='this.style.opacity = 0; this.style.visibility = "hidden";'>
 			<div id='landing_content'>
 				<p id='landing_text'>
-					<b>Get Started With the Raise Your Hand Texas Programs Map</b>
+					<b>Get Started With the Charles Butt Foundation Programs Map</b>
 					<br>
 					<br>
-					<b>Map:</b> Visualize the growth of Raise Your Hand Texas Programs (Raising Blended Learners, Raising School Leaders, and Raising Texas Teachers: University Partners and Charles Butt Scholars) from 2008 to the present.
+					<b>Map:</b> Visualize the growth of Charles Butt Foundation Programs (Raising Blended Learners, Raising School Leaders, and Raising Texas Teachers: University Partners and Charles Butt Scholars) from 2008 to the present.
 					<br>
 					<br>
 					<b>Interaction:</b> In the sidebar on the left hand side, click the Play, Stop, Skip Forward, or Skip Backward buttons to explore the reach of our programs across the state of Texas. You can toggle viewing or hiding each Program, and view by House, Senate, or School District.  
@@ -57,7 +60,7 @@
 					Click the orange button below to explore the programs.
 					<br>
 					<br>
-					<i>The Raise Your Hand Texas Programs Map is a data visualization platform developed by <a href="https://www.coregis.net">Core GIS</a>.</i>
+					<i>The Charles Butt Foundation Programs Map is a data visualization platform developed by <a href="https://www.coregis.net">Core GIS</a>.</i>
 				</p>
 				<br />
 				<span class='button'>Start Exploring! &nbsp;➔</span>
@@ -70,10 +73,27 @@
 			<p>
 				<br />
 			</p>
-			<p class="moreinfo">
-				Use the drop-down menus below to zoom to a <span id="house-district-reference">House</span><span id="senate-district-reference">Senate</span><span id="school-district-reference">School</span> District of your choice.
-				<br /><br />
 
+				<div class='legend'>
+				<div class='legend-title'>Click below to toggle visibility</div>
+				<div class='legend-scale'>
+					<ul class='legend-labels'>
+						<li onClick="showHideLayer('charles-butt-scholars-points', markerNames=['charles_butt_scholars', 'charles_butt_scholars_icon']);" style="cursor: pointer;"><span id="charles_butt_scholars"></span>Charles Butt Scholars</li>
+						<li onClick="showHideLayer('raising-blended-learners-campuses-points', markerNames=['raising_blended_learners_campuses']);" style="cursor: pointer;"><span id="raising_blended_learners_campuses"></span>Raising Blended Learners (Districts)</li>
+						<li onClick="showHideLayer('raising-school-leaders-points', markerNames=['raising_school_leaders']);" style="cursor: pointer;"><span id="raising_school_leaders"></span>Raising School Leaders Participants</li>
+						<li onClick="showHideLayer('raising-texas-teachers-points', markerNames=['raising_texas_teachers', 'raising_texas_teachers_icon']);" style="cursor: pointer;"><nobr><span id="raising_texas_teachers"></span>Raising Texas Teachers:<br />(University Partners)</nobr></li>
+						<li id="house_districts_legend_entry" style="display: none;" onClick="showHideLayer('state-house-districts-lines', markerNames=['state_house_districts']);" style="cursor: pointer !important;"><span id="state_house_districts" class="inactive"></span>School District Boundaries</li>
+						<li id="senate_districts_legend_entry" style="display: none;" onClick="showHideLayer('state-senate-districts-lines', markerNames=['state_senate_districts']);" style="cursor: pointer !important;"><span id="state_senate_districts" class="inactive"></span>Education Service Center Boundaries</li>
+						<li id="school_districts_legend_entry" style="display: none;" onClick="showHideLayer('state-school-districts-lines', markerNames=['state_school_districts']);" style="cursor: pointer !important;"><span id="state_school_districts" class="inactive"></span>State School Districts</li>
+						<li onClick="showHideAlumni(showOnly=true);" style="cursor: pointer;"><span id="alumni_markers"></span>Alumni & active in current year</li>
+						<li onClick="showHideAlumni(showOnly=false, hideOnly=true);" style="cursor: pointer;"><span id="active_markers" class="inactive"></span>Active in current year only</li>
+					</ul>
+				</div> <!-- end of div class='legend-scale' -->
+
+				<p class="moreinfo">
+				Use the drop-down menus below to zoom to a <span id="house-district-reference">House</span><span id="senate-district-reference">Senate</span><span id="school-district-reference">School</span> District of your choice.		
+				</p>
+					
 				<!--Drop down controls-->
 
 				<select id="house-districts-control" onchange="zoomToPolygon('state-house-districts', this.value, 'house_dist');"></select>
@@ -129,25 +149,7 @@
 					<input type="radio" checked="true">
 						<span class="checkmark"></span>Texas <b>School</b> Districts.
 				</p>
-			</p>
 
-
-
-			<div class='legend'>
-				<div class='legend-title'>Click on a program below to toggle its visibility</div>
-				<div class='legend-scale'>
-					<ul class='legend-labels'>
-						<li onClick="showHideLayer('raising-blended-learners-campuses-points', markerNames=['raising_blended_learners_campuses']);" style="cursor: pointer;"><span id="raising_blended_learners_campuses"></span>Raising Blended Learners Districts</li>
-						<li onClick="showHideLayer('charles-butt-scholars-points', markerNames=['charles_butt_scholars', 'charles_butt_scholars_icon']);" style="cursor: pointer;"><span id="charles_butt_scholars"></span>Charles Butt Scholars</li>
-						<li onClick="showHideLayer('raising-texas-teachers-points', markerNames=['raising_texas_teachers', 'raising_texas_teachers_icon']);" style="cursor: pointer;"><nobr><span id="raising_texas_teachers"></span>Raising Texas Teachers:<br />University Partners</nobr></li>
-						<li onClick="showHideLayer('raising-school-leaders-points', markerNames=['raising_school_leaders']);" style="cursor: pointer;"><span id="raising_school_leaders"></span>Raising School Leaders Participants</li>
-						<li id="house_districts_legend_entry" style="display: none;" onClick="showHideLayer('state-house-districts-lines', markerNames=['state_house_districts']);" style="cursor: pointer !important;"><span id="state_house_districts" class="inactive"></span>State House Districts</li>
-						<li id="senate_districts_legend_entry" style="display: none;" onClick="showHideLayer('state-senate-districts-lines', markerNames=['state_senate_districts']);" style="cursor: pointer !important;"><span id="state_senate_districts" class="inactive"></span>State Senate Districts</li>
-						<li id="school_districts_legend_entry" style="display: none;" onClick="showHideLayer('state-school-districts-lines', markerNames=['state_school_districts']);" style="cursor: pointer !important;"><span id="state_school_districts" class="inactive"></span>State School Districts</li>
-						<li onClick="showHideAlumni(showOnly=true);" style="cursor: pointer;"><span id="alumni_markers"></span>Alumni & active in current year</li>
-						<li onClick="showHideAlumni(showOnly=false, hideOnly=true);" style="cursor: pointer;"><span id="active_markers" class="inactive"></span>Active in current year only</li>
-					</ul>
-				</div> <!-- end of div class='legend-scale' -->
 
 <!--create time slider-->
 				<div class='session' id='sliderbar'>
@@ -161,17 +163,13 @@
 					<span id='slider_forward' onclick="moveYearSlider('slider', 'active-year', 1);" title='Go forward one year'><img src="images/skip_forward.svg"></span>
 				</div> <!-- id='slidercontrols' -->
 
-				<div class='legend-source'>Source: <a href="https://www.raiseyourhandtexas.org/" target="_blank">Raise Your Hand Texas</a></div>
+				<div class='legend-source'>Source: <a href="https://www.raiseyourhandtexas.org/" target="_blank">Charles Butt Foundation</a></div>
 				<div class='map-credit'>Map design by <a href="http://www.coregis.net/" target="_blank">CORE GIS</a></div>
 			</div> <!-- end of div id="legend" -->
-
-			<p class="moreinfo">
-				<a href="https://www.raiseyourhandtexas.org/foundation/" target="_blank"><img src="images/ryht_foundation_logo.svg" /></a>
-			</p>
 		</div> <!-- end of div id="mySidenav" class="sidenav" -->
 
-			<div id="about">
-				<span style="font-size:16px;">Raise Your Hand Texas<br>Programs Map</span>
+			<div id="console">
+				<img class="style-logo" src="images/cbf_logo_curved_bottom.png" alt="Charles Butt Foundation Logo">
 			</div>
 
 		<!--END FLYOUT FOR 'ZOOM TO LAYERS'-->
