Added ESC Regions
All mapbox details added; currently commented out in onload.js

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			Zoom in and out
 			</div>
 
-			<!--Drop down controls; we will add ESC boundaries in Phase 2-->
+			<!--Drop down controls-->
 
 			<select id="school-districts-control" onchange="zoomToPolygon('state-school-districts', this.value, 'NAME');"></select>
 
