--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			<div class='stats-title'>
 				Active Programs in
 				<br />
-				<span class="select" id="stats.districtType"></span> <span class="select" id="stats.districtName"></span>
+				<span class="select" id="stats.districtType"></span> <span class="select" id="stats.districtName"></span> <span class="select" id="stats.districtSuffix"></span>
 				<br />
 				In <span class="select" id="stats.year"></span>
 			</div>
