--- a/index.html
+++ b/index.html
@@ -66,24 +66,26 @@
 	<script src="scripts/onload.js"></script>
 
 	<div id="console">
-	  <div class="hide-for-small">
+	  <div class="console-content hide-for-small">
 		<a href="https://charlesbuttfdn.org/" target="_blank"><img class="style-logo" src="images/cbf_logo_curved_bottom.png" alt="Charles Butt Foundation logo"></a>
 	  </div>
-		<div id='legend' class='legend hide-for-small'>
+		<div id='legend' class='console-content legend hide-for-small'>
 			<div class="header">Toggle visibility</div>
-		<div class='legend-scale'>
-			<ul class='legend-labels'>
-				<li onClick="showHideLayer('charles-butt-scholars-points', markerNames=['charles_butt_scholars', 'charles_butt_scholars_icon']);" style="cursor: pointer;"><span id="charles_butt_scholars"></span>Charles Butt Scholars</li>
-				<li onClick="showHideLayer('raising-blended-learners-campuses-points', markerNames=['raising_blended_learners_campuses']);" style="cursor: pointer;"><span id="raising_blended_learners_campuses"></span>Raising Blended Learners (Districts)</li>
-				<li onClick="showHideLayer('raising-school-leaders-points', markerNames=['raising_school_leaders']);" style="cursor: pointer;"><span id="raising_school_leaders"></span>Raising School Leaders Participants</li>
-				<li onClick="showHideLayer('raising-texas-teachers-points', markerNames=['raising_texas_teachers', 'raising_texas_teachers_icon']);" style="cursor: pointer;"><span id="raising_texas_teachers"></span>Raising Texas Teachers:<br />(University Partners)</li>
-				<li id="school_districts_legend_entry" onClick="showHideLayer('state-school-districts-lines', markerNames=['state_school_districts']);" style="cursor: pointer !important;"><span id="state_school_districts" class="inactive"></span>State School Districts</li>
-				<li id="esc_legend_entry" onClick="showHideLayer('esc-regions-lines', markerNames=['esc_regions']);" style="cursor: pointer !important;"><span id="esc_regions" class="inactive"></span>Education Service Centers</li>
-			</ul>
-		</div> <!-- end of div class='legend-scale' -->
+			<div class='legend-scale'>
+				<ul class='legend-labels'>
+					<li onClick="showHideLayer('charles-butt-scholars-points', markerNames=['charles_butt_scholars', 'charles_butt_scholars_icon']);" style="cursor: pointer;"><span id="charles_butt_scholars"></span>Charles Butt Scholars</li>
+					<li onClick="showHideLayer('raising-blended-learners-campuses-points', markerNames=['raising_blended_learners_campuses']);" style="cursor: pointer;"><span id="raising_blended_learners_campuses"></span>Raising Blended Learners (Districts)</li>
+					<li onClick="showHideLayer('raising-school-leaders-points', markerNames=['raising_school_leaders']);" style="cursor: pointer;"><span id="raising_school_leaders"></span>Raising School Leaders Participants</li>
+					<li onClick="showHideLayer('raising-texas-teachers-points', markerNames=['raising_texas_teachers', 'raising_texas_teachers_icon']);" style="cursor: pointer;"><span id="raising_texas_teachers"></span>Raising Texas Teachers:<br />(University Partners)</li>
+					<li id="school_districts_legend_entry" onClick="showHideLayer('state-school-districts-lines', markerNames=['state_school_districts']);" style="cursor: pointer !important;"><span id="state_school_districts" class="inactive"></span>State School Districts</li>
+					<li id="esc_legend_entry" onClick="showHideLayer('esc-regions-lines', markerNames=['esc_regions']);" style="cursor: pointer !important;"><span id="esc_regions" class="inactive"></span>Education Service Centers</li>
+				</ul>
+			</div> <!-- end of div class='legend-scale' -->
+		</div> <!-- end of div id="legend" -->
 
-			<div class="header-dropdown">
-			Zoom in and out
+		<div class="console-content">
+			<div class="header">
+				Zoom in and out
 			</div>
 
 			<!--Drop down controls-->
@@ -140,8 +142,8 @@
 				<input type="radio" checked="true">
 					<span class="checkmark"></span>Texas <b>School</b> Districts.
 			</p>
-
-
+		</div>
+		<div class="console-content">
 			<p class="header-explore">
 				Explore the reach of our programs across the state</p>
 
@@ -156,10 +158,12 @@
 				<span id='slider_stop' onclick="stopYearAnimation('slider_play', 'slider_stop');" title='Stop animation'><img src="images/stop.svg"></span>
 				<span id='slider_forward' onclick="moveYearSlider('active-year', 1);" title='Go forward one year'><img src="images/skip_forward.svg"></span>
 			</div> <!-- id='slidercontrols' -->
-
+		</div>
+		<div class="console-content">
 			<div class='map-credit'>Source: <a href="https://charlesbuttfdn.org/" target="_blank">Charles Butt Foundation</a></div>
 			<div class='map-credit'>Map design by <a href="http://www.coregis.net/" target="_blank">CORE GIS</a></div>
-		</div> <!-- end of div id="legend" -->
+		</div>
+	</div> <!-- end of console div -->
 
 	<!--END FLYOUT FOR 'CONSOLE'-->
 
