Remove unused responsive class and add a logo helper

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 	<script src="scripts/onload.js"></script>
 
 	<div id="console">
-	  <div class="console-content hide-for-small">
-		<a href="https://charlesbuttfdn.org/" target="_blank"><img class="style-logo" src="images/cbf_logo_curved_bottom.png" alt="Charles Butt Foundation logo"></a>
+	  <div class="console-content logo-container">
+			<a href="https://charlesbuttfdn.org/" target="_blank"><img class="style-logo" src="images/cbf_logo_curved_bottom.png" alt="Charles Butt Foundation logo"></a>
 	  </div>
-		<div id='legend' class='console-content legend hide-for-small'>
+		<div id='legend' class='console-content legend'>
 			<div class="header">Toggle visibility</div>
 			<div class='legend-scale'>
 				<ul class='legend-labels'>
