Logo and header styles

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 			</p>
 		</div>
 		<div class="console-content">
-			<p class="header-explore">
-				Explore the reach of our programs across the state</p>
+			<div class="header">
+				Explore the reach of our programs across the state</div>
 
 <!--create time slider-->
 			<div class='session' id='sliderbar'>
