Stats are now cumulative up to selected year

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<br />
 				<span class="select" id="stats.districtType"></span> <span class="select" id="stats.districtName"></span> <span class="select" id="stats.districtSuffix"></span>
 				<br />
-				In <span class="select" id="stats.year"></span>
+				By <span class="select" id="stats.year"></span>
 			</div>
 			<div class='stats-scale'>
 				<ul class='stats-labels'>
