--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 		<div class='stats' id='statsBox'>
 			<div class='stats-title'>
-				Active Programs in
+				Programs in
 				<br />
 				<span class="select" id="stats.districtType"></span> <span class="select" id="stats.districtName"></span> <span class="select" id="stats.districtSuffix"></span>
 				<br />
