Switch to tom-select's API for resetting the ISDs dropdown as needed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 			<!--Drop down controls-->
 
-			<select id="school-districts-control" onchange="zoomToPolygon('state-school-districts', this.value, 'NAME');" placeholder="enter District name here"></select>
+			<select id="school-districts-control" onchange="zoomToPolygon('state-school-districts', this.value, 'NAME');" placeholder="School Districts"></select>
 
 			<select id="esc-regions-control" onchange="zoomToPolygon('esc-regions', this.value, 'REGION');"></select>
 
